// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer methods Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "transfer",
            "Parameters": [
              {
                "Name": "SendMail",
                "Value": true,
              },
              {
                "Name": "DateDue",
                "Value": "2024-10-10",
              },
              {
                "Name": "CustomerFirstName",
                "Value": "Test",
              },
              {
                "Name": "CustomerGender",
                "Value": 1,
              },
              {
                "Name": "CustomerLastName",
                "Value": "Acceptatie",
              },
              {
                "Name": "CustomerEmail",
                "Value": "test@buckaroo.nl",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`Transfer methods Refund 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "EUR",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "0D04AEAEE48E464597831E15BB92FBF1",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "transfer",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
